[gd_scene load_steps=4 format=3 uid="uid://csuiyxl3dqwu8"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_m3n2r"]
[ext_resource type="Theme" uid="uid://cs08gtmn0bscc" path="res://resources/themes/main_theme.tres" id="2_k4n2r"]
[ext_resource type="Texture2D" uid="uid://dvy18xswujlgt" path="res://assets/images/backgrounds/menu_bg.jpg" id="3_p5n2r"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_k4n2r")
script = ExtResource("1_m3n2r")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_p5n2r")
expand_mode = 1
stretch_mode = 6

[node name="BackgroundTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "GIGAMON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="CenterContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Play"

[node name="SettingsButton" type="Button" parent="CenterContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="CreditsButton" type="Button" parent="CenterContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Credits"

[node name="ExitButton" type="Button" parent="CenterContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Exit"

[connection signal="timeout" from="BackgroundTimer" to="." method="_on_background_timer_timeout"]
[connection signal="mouse_entered" from="CenterContainer/ButtonsContainer/PlayButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/ButtonsContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="CenterContainer/ButtonsContainer/SettingsButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/ButtonsContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="mouse_entered" from="CenterContainer/ButtonsContainer/CreditsButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/ButtonsContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="mouse_entered" from="CenterContainer/ButtonsContainer/ExitButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/ButtonsContainer/ExitButton" to="." method="_on_exit_button_pressed"]
